change pdf links

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 <div id="apurva-nakade" class="section level1">
 <h1>Apurva Nakade</h1>
 <p><img src="images/me0.jpg" width="200px" class="right" /></p>
-<p>I'm a postdoc in the <a href="http://www.math.uwo.ca/" class="external-link">Department of Mathematics</a> at the University of
-Western Ontario working with <a href="https://jdc.math.uwo.ca/" class="external-link">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.</p>
+<p>I'm a postdoc in the <a href="http://www.math.uwo.ca/">Department of Mathematics</a> at the University of
+Western Ontario working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.</p>
 <p>In the Fall of 2020, I'll be teaching Math 2151A (Discrete Math for Engineers).</p>
 <p>I work in the area of algebraic topology and homotopy theory. My broad
 interests are in understanding how homotopy theoretic tools can be used
@@ -155,11 +155,11 @@ it more accessible and equitable.</p>
 </tr>
 <tr class="odd">
 <td>Job Stuff</td>
-<td><a href="docs/CV.pdf">ceeeeEEEEEVVVVVeeeee</a></td>
+<td><a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">ceeeeEEEEEVVVVVeeeee</a></td>
 </tr>
 <tr class="even">
 <td></td>
-<td><a href="docs/ResearchStatement.pdf">Research Statement</a></td>
+<td><a href="https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing">Research Statement</a></td>
 </tr>
 </tbody>
 </table>
