--- a/teaching.html
+++ b/teaching.html
@@ -130,7 +130,7 @@
 <p>The Directed Reading Program is a program for undergrads and grad students/postdocs.
 Undergrads are paired with a mentor whose interests align with theirs and they study a topic of their choice for one semester.
 It is intended to help motivated students explore topics in more depth than possible in a classroom setting.
-I help organize the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP at UWO</a> and have helped out with organizing the <a href="http://www.math.jhu.edu/drp.html">DRP at JHU</a>.
+I co-organize the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP at UWO</a> and in the past have co-organized the <a href="http://www.math.jhu.edu/drp.html">DRP at JHU</a>.
 Following is the list of projects I’ve mentored.</p>
 <ul>
 <li>Jacob Fabe, <em>Fundamental Group</em> from Topology by Munkres (<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP, Fall
@@ -138,8 +138,7 @@ Following is the list of projects I’ve mentored.</p>
 <li>Tim Yau, <em>An Introduction to Manifolds</em> by Loring Tu. (<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP, Fall
 2019</a>)</li>
 <li>Hannah Wool, <em>Topology</em> by Munkres. (<a href="http://www.math.jhu.edu/drp.html#Spring2019">DRP, Spring 2019</a>)</li>
-<li>Sydney Timmerman, <em>Differential Geometry and Lie Groups for
-Physicists</em> by Marián Fecko. (<a href="http://www.math.jhu.edu/drp.html#Fall2018">DRP, Fall 2018</a>)</li>
+<li>Sydney Timmerman, <a href="http://www.math.jhu.edu/drpfiles/F2018%20-%20Sydney.pdf"><em>Differential Geometry and Lie Groups for Physicists</em></a> by Marián Fecko. (<a href="http://www.math.jhu.edu/drp.html#Fall2018">DRP, Fall 2018</a>)</li>
 <li>Eric Cochran, <em>An Introduction to Manifolds</em> by Loring Tu. (<a href="http://www.math.jhu.edu/drp.html#Spring2018">DRP,
 Spring 2018</a>)</li>
 <li>Chris Chia, <em>The Knot Book</em> by Adams Collins. (<a href="http://www.math.jhu.edu/drp.html#Fall2017">DRP, Fall 2017</a>)</li>
@@ -164,10 +163,10 @@ Following are notes from some of the courses I’ve taught and projects I’ve d
 <div id="canadausa-mathcamp-20192019" class="section level3">
 <h3><a href="https://www.mathcamp.org/2019/index.php"><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</a></h3>
 <ul>
-<li><a href="courses/2019MathCamp/GaloisCorrespondenceOfCoveringSpaces.pdf">Galois Correspondence of Covering Spaces</a></li>
-<li><a href="courses/2019MathCamp/GroupCohomology.pdf">From High School Arithmetic to Group Cohomology</a></li>
-<li><a href="courses/2019MathCamp/CrashCourseOnLinearAlgebra.pdf">Crash Course on Linear Algebra</a></li>
-<li><a href="courses/2019MathCamp/RiemannSurfaces/index.html">Riemann Surfaces</a></li>
+<li><a href="https://drive.google.com/file/d/1yMpw52rjMrBRj5q8W2PIDRDp9yXmDYVN/view?usp=sharing">Galois Correspondence of Covering Spaces</a></li>
+<li><a href="https://drive.google.com/file/d/1L7urIOuiu4JIfI6ry2lkKin6Xof8yJdd/view?usp=sharing">From High School Arithmetic to Group Cohomology</a></li>
+<li><a href="https://drive.google.com/file/d/1lnX4p_K75vMl0rt0JtOeTYPm9eA6Zi2j/view?usp=sharing">Crash Course on Linear Algebra</a></li>
+<li><a href="https://drive.google.com/drive/folders/16o9Slgd4YvhjUCEp_BHSc-xf-2ubKHlo?usp=sharing">Riemann Surfaces</a></li>
 </ul>
 <p>Reading project: Ezra Erives, <em>Differential Geometry and Lie Groups for Physicists</em>
 by Marián Fecko.</p>
@@ -175,23 +174,23 @@ by Marián Fecko.</p>
 <div id="canadausa-mathcamp-20182018" class="section level3">
 <h3><a href="https://www.mathcamp.org/2018/index.php"><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</a></h3>
 <ul>
-<li><a href="courses/2018MathCamp/How%20Curved%20Is%20a%20Potato/">How Curved Is a Potato?</a></li>
-<li><a href="courses/2018MathCamp/CohomologyViaSheaves.pdf">Cohomology via Sheaves</a></li>
-<li><a href="courses/2018MathCamp/TheQuantumSpring.pdf">The Quantum
+<li><a href="https://drive.google.com/drive/folders/1zZ49l7ZrmVfg4Lrt7iiCZrk3YH_kVVSg?usp=sharing">How Curved Is a Potato?</a></li>
+<li><a href="https://drive.google.com/file/d/1C21oAC_dH0EX-el2mdT9lH_taY2xZNMm/view?usp=sharing">Cohomology via Sheaves</a></li>
+<li><a href="https://drive.google.com/file/d/1UxZK5drBPLGt4GCC22VtEgYsGLT3p8Nu/view?usp=sharing">The Quantum
 Spring</a></li>
-<li><a href="courses/2018MathCamp/WouldIEverLieGroupToYou.pdf">Would I ever Lie Group to you?</a></li>
+<li><a href="https://drive.google.com/file/d/1QSPZ5WpFDLCa1AzFrJiE57NXRhwRo8Ra/view?usp=sharing">Would I ever Lie Group to you?</a></li>
 </ul>
 <p>Reading project: Edgar Wang, <em>Algebraic Topology</em> and Alan Yan, <em>Algebraic Topology</em> by Hatcher.</p>
 </div>
 <div id="canadausa-mathcamp-20172017" class="section level3">
 <h3><a href="https://www.mathcamp.org/2017/index.php"><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</a></h3>
 <ul>
-<li><a href="courses/2017MathCamp/All%20things%20manifoldy/">All things manifoldy</a></li>
-<li><a href="courses/2017MathCamp/Euler%20Characteristic/">Euler Characteristic</a></li>
-<li><a href="courses/2017MathCamp/Symmetries%20of%20Spaces/">Symmetries of Spaces</a></li>
-<li><a href="courses/2017MathCamp/What%20is%20Homology/">What is Homology?</a></li>
-<li><a href="courses/2017MathCamp/Representation%20theory/">Representation theory</a></li>
-<li><a href="courses/2017MathCamp/Lagrangian%20and%20Hamiltonian%20Mechanics/">Lagrangian and Hamiltonian Mechanics</a></li>
+<li><a href="https://drive.google.com/drive/folders/1_ksj5iK0wjRhCcMH2r3a6t-5Y_IXTG49?usp=sharing">All things manifoldy</a></li>
+<li><a href="https://drive.google.com/drive/folders/13-oarucRe06Mi7jWdGFAQoW1Z9h0lcWM?usp=sharing">Euler Characteristic</a></li>
+<li><a href="https://drive.google.com/drive/folders/18f1YeG10HfZ-keih3sbdkXNTybVcjY38?usp=sharing">Symmetries of Spaces</a></li>
+<li><a href="https://drive.google.com/drive/folders/1xardSdDjo__hk7os2CR5BUOPjvAwuD-q?usp=sharing">What is Homology?</a></li>
+<li><a href="https://drive.google.com/drive/folders/1gCkxfiQ09TKmofzZKd6TlNikzWV3Ltum?usp=sharing">Representation theory</a></li>
+<li><a href="https://drive.google.com/drive/folders/1sCCXN0ffj0SP216WOwTwe7LJgIXJtPpg?usp=sharing">Lagrangian and Hamiltonian Mechanics</a></li>
 </ul>
 </div>
 </div>
@@ -199,64 +198,67 @@ Spring</a></li>
 <h2>JHU</h2>
 <p>At JHU, I designed and taught a full semester (IBL) Honors Single Variable Calculus course twice and also a couple of shorter intersession courses.</p>
 <ul>
-<li><a href="courses/2018HonorsCalc/index.html">Honors Single Variable Calculus '18 (IBL)</a></li>
-<li><a href="courses/2017HonorsCalc/index.html">Honors Single Variable Calculus '17 (IBL)</a></li>
-<li><a href="courses/2018Symm&amp;Poly.pdf">Symmetries &amp; Polynomials '18 (IBL)</a></li>
-<li><a href="courses/2017AlgTop/index.html">H2G2 Algebraic Topology '17</a></li>
+<li><a href="https://drive.google.com/drive/folders/1xF37VjqpQfSI9W5PmrK19bp8OybGmmpW?usp=sharing">Honors Single Variable Calculus '18 (IBL)</a></li>
+<li><a href="https://drive.google.com/drive/folders/16gJLOf0L6RJ09yRL_b7AozVyq3wHsTMG?usp=sharing">Honors Single Variable Calculus '17 (IBL)</a></li>
+<li><a href="https://drive.google.com/file/d/1dChuk8J7s31C8xGurzsbf988VORnyXgb/view?usp=sharing">Symmetries &amp; Polynomials '18 (IBL)</a></li>
+<li><a href="https://drive.google.com/drive/folders/1UmhBnhqXzL1b9kb1zn-7qkYgSSW-Gmwz?usp=sharing">H2G2 Algebraic Topology '17</a></li>
 </ul>
 </div>
 <div id="expository-notes" class="section level2">
 <h2>Expository Notes</h2>
 <p>Following are some notes I’ve taken while learning a new subject in my grad school.
-They have not been proofread and are likely to contain several mistakes, viewer discretion is advised.</p>
+The entire folder can be found <a href="https://drive.google.com/drive/folders/1UR3MW_iRyv6idye57D8QuOu_VEAooS7u?usp=sharing">here</a>.
+They have not been proofread and are likely to contain several mistakes, viewer discretion is advised.
+(“One day” when I get some free time I intend to clean them up.)</p>
 <div id="homotopy-theory" class="section level4">
 <h4>Homotopy Theory</h4>
 <ul>
-<li><a href="notes/Bits%20and%20Pieces/What%20is%20a%20Spectrum%3F.pdf">What is a Spectrum?</a></li>
-<li><a href="notes/CMI/vector%20fields%20on%20spheres/index.html">Vector fields on Spheres</a></li>
-<li><a href="notes/JHU%20Course%20Notes/Mosher%20and%20Tangora/index.html">Mosher and Tangora Notes</a></li>
-<li><a href="notes/Bits%20and%20Pieces/SW%20numbers.pdf">Steifel Whitney Numbers</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Homotopy%20of%20MO/index.html">Homotopy of MO</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Model%20Categories/index.html">Model Categories</a></li>
-<li><a href="notes/JHU%20Course%20Notes/Infinity%20Categories/index.html">Infinity Categories</a></li>
+<li><a href="https://drive.google.com/file/d/16zRKLkBl4skQ0UNKRXfM7d51qWnBLwGF/view?usp=sharing">What is a Spectrum?</a></li>
+<li><a href="https://drive.google.com/drive/folders/1fVAeXqn82gOEpEJ9RfBnXqdeJjxTPJNk?usp=sharing">Vector fields on Spheres</a></li>
+<li><a href="https://drive.google.com/drive/folders/1vSFBZh3cuDoJPglIeBmLUV1Ur0RvhZ-p?usp=sharing">Mosher and Tangora Notes</a></li>
+<li><a href="https://drive.google.com/file/d/1W9TDU1SaWVLghrSaw8Dg04vdfW9veW_C/view?usp=sharing">Steifel Whitney Numbers</a></li>
+<li><a href="https://drive.google.com/drive/folders/1ns-S54As89Srb8Hlz2ypOmzoOA-CW3il?usp=sharing">Homotopy of MO</a></li>
+<li><a href="https://drive.google.com/drive/folders/1F2cHnX93gMsFYpfASU-TBF4GhZ5TZRBf?usp=sharing">Model Categories</a></li>
+<li><a href="https://drive.google.com/drive/folders/12tMk47gvY0B8cL0LmtRxLMcrVudd73y-?usp=sharing">Infinity Categories</a></li>
 </ul>
 </div>
 <div id="symplectic-topology-physics" class="section level4">
 <h4>Symplectic Topology &amp; Physics</h4>
 <ul>
-<li><a href="notes/Conference%20Notes/MSRI-h-principles.pdf">h-principles MSRI Summer School</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Symplectic%20Geometry/index.html">Symplectic Geometry</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Geometry%20of%20Dirac%20Operators/index.html">Geometry of Dirac Operators</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Finite%20Gauge%20Group%20Theory/index.html">Finite Group Gauge Theory</a></li>
-<li><a href="notes/Bits%20and%20Pieces/FIOs%20and%20Lagrangian%20Submanifolds/index.html">FIOs and Lagrangian Submanifolds</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Classical%20Lie%20Groups.pdf">Lie Groups</a></li>
-<li><a href="notes/Bits%20and%20Pieces/Connections%20on%20Principal%20Bundles%20and%20Classical%20Electromagnetism.pdf">Classical Electromagnetism</a></li>
+<li><a href="https://drive.google.com/file/d/1uecVJP6Xl1vScsswWGqBtJ1s3o9PwG8C/view?usp=sharing">h-principles MSRI Summer School</a></li>
+<li><a href="https://drive.google.com/drive/folders/1NJllhRgGV5uMSg3hfbp2wcJgScIwhhSZ?usp=sharing">Symplectic Geometry</a></li>
+<li><a href="https://drive.google.com/drive/folders/19GanFw6odpL4tRUJa-mPsVmVKcK52jaW?usp=sharing">Geometry of Dirac Operators</a></li>
+<li><a href="https://drive.google.com/drive/folders/1OyE4ADuxnFIJ3-wuEifCNYWcCF2-iiRd?usp=sharing">Finite Group Gauge Theory</a></li>
+<li><a href="https://drive.google.com/drive/folders/1lkx7z7ht5XuRAhhKnhVgLiPHJ2GLSrT3?usp=sharing">FIOs and Lagrangian Submanifolds</a></li>
+<li><a href="https://drive.google.com/file/d/15SwA8TDmLUMElPQYvhMcIAttXgNzuKbz/view?usp=sharing">Lie Groups</a></li>
+<li><a href="https://drive.google.com/file/d/1kFh_-_DmR4wt-sDBiOggM5a5U-5W7V_l/view?usp=sharing">Connections on Principal Bundles and Classical Electromagnetism</a></li>
 </ul>
 </div>
 <div id="algebra" class="section level4">
 <h4>Algebra</h4>
 <ul>
-<li><a href="notes/JHU%20Course%20Notes/Commutative%20Algebra.pdf">Commutative Algebra Notes</a></li>
-<li><a href="notes/CMI/Representation%20Theory%20of%20Symmetric%20Group.pdf">Rep Theory of Symmetric Group</a></li>
+<li><a href="https://drive.google.com/file/d/1iwjYv6a5myfnvFKXg8VGAd2fsMZTDXin/view?usp=sharing">Commutative Algebra Notes</a></li>
+<li><a href="https://drive.google.com/file/d/1xMliaDffPi6yUzp5U2d_wIdPJ6yyfLE1/view?usp=sharing">Rep Theory of Symmetric Group</a></li>
 </ul>
 </div>
 </div>
 <div id="complete-list-of-courses" class="section level2">
 <h2>Complete List of Courses</h2>
-<table style="width:100%;">
+<div class="small">
+<table>
 <colgroup>
 <col width="9%" />
-<col width="42%" />
-<col width="8%" />
-<col width="15%" />
-<col width="23%" />
+<col width="40%" />
+<col width="14%" />
+<col width="11%" />
+<col width="22%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th>University</th>
 <th>Course</th>
 <th>Years</th>
-<th>Avg # of students</th>
+<th># of students</th>
 <th></th>
 </tr>
 </thead>
@@ -264,90 +266,91 @@ They have not been proofread and are likely to contain several mistakes, viewer 
 <tr class="odd">
 <td>UWO</td>
 <td>Algebraic Topology</td>
-<td>2021</td>
+<td>Winter 2021</td>
 <td>-</td>
-<td>Math Grad</td>
+<td>Grad</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Discrete Structures for Engineering</td>
-<td>2020</td>
+<td>Fall 2020</td>
 <td>-</td>
-<td>-</td>
+<td>First year undergrad</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Calculus II for Mathematical and Physical Sciences</td>
-<td>2020</td>
+<td>Winter 2020</td>
 <td>150</td>
 <td>First year undergrad</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Calculus I for Mathematical and Physical Sciences</td>
-<td>2019</td>
+<td>Fall 2019</td>
 <td>176</td>
 <td>First year undergrad</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Topics in Category Theory</td>
-<td>2019</td>
+<td>Fall 2019</td>
 <td>3</td>
-<td>Math Grad</td>
+<td>Grad</td>
 </tr>
 <tr class="even">
 <td>JHU</td>
 <td>Symmetries &amp; Polynomials</td>
-<td>2018</td>
+<td>Intersession 2018</td>
 <td>10</td>
 <td>All years undergrad</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Honors Single Variable Calculus</td>
-<td>2017, 18</td>
+<td>Spring 2017, 18</td>
 <td>7</td>
 <td>First year undergrad</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Hitchhiker’s Guide to Algebraic Topology</td>
-<td>2017</td>
+<td>Intersession 2017</td>
 <td>11</td>
 <td>All years undergrad</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Calculus II (For Biology and Social Science)</td>
-<td>2016</td>
+<td>Summer 2016</td>
 <td>5</td>
 <td>First year undergrad</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Differential Equations with Applications</td>
-<td>2015, 17</td>
+<td>Summer 2015, 17</td>
 <td>11</td>
 <td>First year undergrad</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Online Linear Algebra</td>
-<td>2014</td>
+<td>Summer 2014</td>
 <td>34</td>
 <td>All years undergrad</td>
 </tr>
 <tr class="even">
 <td>Mathcamp</td>
 <td>See above</td>
-<td>2015-19</td>
+<td>Summers 2015-19</td>
 <td>-</td>
 <td>High school &amp; middle school</td>
 </tr>
 </tbody>
 </table>
-<p>Course websites: <a href="courses/2019Calc1000A/index.html">Calc '19</a>, <a href="courses/2020Calc1501B/index.html">Calc '20</a>, <a href="courses/2017DiffEq/index.html">DiffEq '17</a>, <a href="courses/2016Calc/index.html">Calc '16</a>, <a href="courses/2015DiffEq/index.html">DiffEq '15</a>.</p>
+</div>
+<p>Course websites: <a href="https://drive.google.com/drive/folders/1HFqAhHYG4m_BtwQSXGeSyItFt1xBHtWE?usp=sharing">Calc '19</a>, <a href="https://drive.google.com/drive/folders/1MkXy0CPOKqSJANr9QSD4gwYdMYjVcdmV?usp=sharing">Calc '20</a>, <a href="https://drive.google.com/drive/folders/1_lSraXoUwk7CmStg23T1nHpYvf9zq9jA?usp=sharing">DiffEq '17</a>, <a href="https://drive.google.com/drive/folders/199dY1MF3TWhJ6gUKQyPf_7YK6rO36HZc?usp=sharing">Calc '16</a>, <a href="https://drive.google.com/drive/folders/1X7WKPhBljbXt6dBt278t2lKUlWUKIU5Z?usp=sharing">DiffEq '15</a>.</p>
 <div id="calculus-ii-for-mathematical-and-physical-sciences-uwo-winter-2020" class="section level4">
 <h4>Calculus II for Mathematical and Physical Sciences (UWO, Winter 2020)</h4>
 <p>was a full semester 4 credit course with more than 300 students divided into 2 sections. I was the instructor for one of the sections and was solely responsible for making weekly WebWork homeworks and making exams along with the course coordinator. The class regularly met for 4 hours every week.</p>
@@ -358,17 +361,19 @@ They have not been proofread and are likely to contain several mistakes, viewer 
 </div>
 <div id="topics-in-category-theory-uwo-fall-2019" class="section level4">
 <h4>Topics in Category Theory (UWO, Fall 2019)</h4>
-<p>was a full semester reading course for math graduate students that I supervised.</p>
+<p>was a full semester reading course for math graduate students that I supervised. We worked through Chapter 1 of Ravi Vakil’s <a href="http://math.stanford.edu/~vakil/216blog/FOAGnov1817public.pdf"><em>Foundations of Algebraic Geometry</em></a> with some help from Emily Riehl’s <a href="http://www.math.jhu.edu/~eriehl/context.pdf"><em>Category Theory in Context</em></a>.</p>
 </div>
 <div id="calculus-ii-for-biology-and-social-science-jhu-summer-2019" class="section level4">
 <h4>Calculus II For Biology and Social Science (JHU, Summer 2019)</h4>
-<p>was a month long summer course which aims to cover semester-worth of material in one month. The class regularly met for 10 hours every week.</p>
+<p>was a month long summer course which covered semester-worth of material. The class regularly met for 10 hours every week and had weekly exams.</p>
 </div>
-<div id="differential-equations-with-applications" class="section level4">
-<h4>Differential Equations with Applications</h4>
+<div id="differential-equations-with-applications-jhu-summer-2015-17" class="section level4">
+<h4>Differential Equations with Applications (JHU, Summer 2015, 17)</h4>
+<p>was a month long summer course which covered semester-worth of material. The class regularly met for 10 hours every week and had weekly exams.</p>
 </div>
-<div id="online-linear-algebra" class="section level4">
-<h4>Online Linear Algebra</h4>
+<div id="online-linear-algebra-jhu-summer-2014" class="section level4">
+<h4>Online Linear Algebra (JHU, Summer 2014)</h4>
+<p>was a fully online two month long summer course which covered semester-worth of material. The class regularly met for 4-5 hours every week.</p>
 
 </div>
 </div>
