--- a/math-projects.html
+++ b/math-projects.html
@@ -156,16 +156,16 @@ mathematical content</a> to the mathlib library.</p>
 <div id="an-application-of-the-h-principle-to-manifold-calculus." class="section level3">
 <h3>An application of the h-principle to Manifold Calculus.</h3>
 <p>This was my PhD thesis, in which I applied homotopy theoretic techniques
-to study problems for differential geometry. Here is <a href="https://doi.org/10.1007/s40062-020-00255-3" class="external-link">the paper</a> (<a href="https://arxiv.org/abs/1711.07670" class="external-link">arXiv
-version</a>) based on the <a href="docs/PhD%20Thesis.pdf">thesis</a> <span class="small">(Updated on: May 07, 2019)</span>.
-Here are some notes <a href="docs/2019%20-%20OSU%20Conference.pdf">notes1</a>, <a href="docs/2019%20-%20Thesis%20Defense.pdf">notes2</a> from the talks I gave on this
+to study problems for differential geometry. Here is <a href="https://doi.org/10.1007/s40062-020-00255-3">the paper</a> (<a href="https://arxiv.org/abs/1711.07670">arXiv
+version</a>) based on the <a href="https://drive.google.com/file/d/1fHkImG-CTB2liHDIAo3YmzqBmN-Qibx6/view?usp=sharing">thesis</a> <span class="small">(Updated on: May 07, 2019)</span>.
+Here are some notes <a href="https://drive.google.com/file/d/1h8pHb-5HmM55_bwdzPYDB7cVHo4MHy-I/view?usp=sharing">notes1</a>, <a href="https://drive.google.com/file/d/1D8TSRQFVUVjM3wQ74npbH2hibrHsDho_/view?usp=sharing">notes2</a> from the talks I gave on this
 topic.</p>
 </div>
 <div id="protein-folding-using-markov-chains" class="section level3">
 <h3>Protein folding using Markov chains</h3>
 <p>During my undergrad, I briefly worked on a project involving some
 protein folding models using basic linear algebra.
-<a href="docs/2012%20-%20Protein%20Folding.pdf">Information Processing Letters, IPL4801</a>.</p>
+<a href="https://drive.google.com/file/d/1xT6C4O_fMvpqoJCfnSq1ypeikM6XNMjw/view?usp=sharing">Information Processing Letters, IPL4801</a>.</p>
 </div>
 <div id="projects-that-did-not-quite-work-out" class="section level3">
 <h3>Projects that did not quite work out</h3>
