--- a/math-projects.html
+++ b/math-projects.html
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
-<link rel="prev" href="index.html"/>
+<link rel="prev" href="machine-math-and-me.html"/>
 <link rel="next" href="teaching.html"/>
 <script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
@@ -73,6 +73,11 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
+<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html"><i class="fa fa-check"></i>Machine, Math, and Me</a>
+<ul>
+<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
+<li class="chapter" data-level="" data-path="machine-math-and-me.html"><a href="machine-math-and-me.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html"><i class="fa fa-check"></i>Math Projects</a>
 <ul>
 <li class="chapter" data-level="" data-path="math-projects.html"><a href="math-projects.html#current"><i class="fa fa-check"></i>Current</a>
@@ -183,7 +188,7 @@ protein folding models using basic linear algebra.
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="machine-math-and-me.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="teaching.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
@@ -235,6 +240,20 @@ gitbook.start({
 });
 </script>
 
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    var src = "true";
+    if (src === "" || src === "true") src = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML";
+    if (location.protocol !== "file:")
+      if (/^https?:/.test(src))
+        src = src.replace(/^https?:/, '');
+    script.src = src;
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
 </body>
 
 </html>
