--- a/teaching.html
+++ b/teaching.html
@@ -96,14 +96,14 @@
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
 <ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#mathcamp"><i class="fa fa-check"></i>Mathcamp</a>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a>
 <ul>
 <li><a href="teaching.html#canadausa-mathcamp-20202020"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2020</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20192019"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20182018"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20172017"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</span></a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#jhu"><i class="fa fa-check"></i>JHU</a></li>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins-university"><i class="fa fa-check"></i>Johns Hopkins University</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#complete-list-of-courses"><i class="fa fa-check"></i>Complete List of Courses</a></li>
 </ul></li>
@@ -149,8 +149,8 @@ Spring 2018</a>)</li>
 <li>Chris Chia, <em>The Knot Book</em> by Adams Collins. (<a href="http://www.math.jhu.edu/drp.html#Fall2017">DRP, Fall 2017</a>)</li>
 </ul>
 </div>
-<div id="mathcamp" class="section level2">
-<h2>Mathcamp</h2>
+<div id="canadausa-mathcamp" class="section level2">
+<h2>Canada/USA Mathcamp</h2>
 <p>I am fortunate to have been able to participate in the amazing place that is the Mathcamp for the past four years.
 <a href="https://www.mathcamp.org/">Canada/USA Mathcamp</a> is an immersive summer experience for mathematically talented students ages 13‑18 from all over the world.
 Among other things, I have been designing and teaching some fun courses there.
@@ -199,8 +199,8 @@ Spring</a></li>
 </ul>
 </div>
 </div>
-<div id="jhu" class="section level2">
-<h2>JHU</h2>
+<div id="johns-hopkins-university" class="section level2">
+<h2>Johns Hopkins University</h2>
 <p>At JHU, I designed and taught a full semester (IBL) Honors Single Variable Calculus course twice and also a couple of shorter intersession courses.</p>
 <ul>
 <li><a href="https://drive.google.com/drive/folders/1xF37VjqpQfSI9W5PmrK19bp8OybGmmpW?usp=sharing">Honors Single Variable Calculus '18 (IBL)</a></li>
