--- a/machine-math-and-me.html
+++ b/machine-math-and-me.html
@@ -96,14 +96,14 @@
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html"><i class="fa fa-check"></i>Teaching</a>
 <ul>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#mathcamp"><i class="fa fa-check"></i>Mathcamp</a>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a>
 <ul>
 <li><a href="teaching.html#canadausa-mathcamp-20202020"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2020</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20192019"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2019</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20182018"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2018</span></a></li>
 <li><a href="teaching.html#canadausa-mathcamp-20172017"><span><img src="images/mathcamp-icon.png" alt="Canada/USA Mathcamp" /> 2017</span></a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#jhu"><i class="fa fa-check"></i>JHU</a></li>
+<li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#johns-hopkins-university"><i class="fa fa-check"></i>Johns Hopkins University</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 <li class="chapter" data-level="" data-path="teaching.html"><a href="teaching.html#complete-list-of-courses"><i class="fa fa-check"></i>Complete List of Courses</a></li>
 </ul></li>
